// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AssertionError 1`] = `
{
  "code": "ERR_ASSERTION",
  "debug": {
    "actual": false,
    "diff": "simple",
    "expected": true,
    "generatedMessage": false,
    "operator": "==",
  },
  "message": "asserting false",
  "name": "AssertionError",
  "stack": Any<String>,
}
`;

exports[`CustomError with CustomError cause 1`] = `
{
  "cause": [
    {
      "code": 2,
      "debug": {
        "debug": {
          "woo1": "woo1",
        },
      },
      "message": "previous",
      "name": "Error",
      "stack": Any<String>,
    },
  ],
  "code": 2,
  "debug": {
    "woo2": "woo2",
  },
  "message": "current",
  "name": "Error",
  "stack": Any<String>,
}
`;

exports[`URLError 1`] = `
{
  "code": "ERR_INVALID_URL",
  "debug": {
    "base": "lol",
    "input": "/",
  },
  "message": "Invalid URL",
  "name": "TypeError",
  "stack": Any<String>,
}
`;

exports[`dont explode on primitives: 0 1`] = `
{
  "debug": {
    "err": "0",
    "typeofErr": "number",
  },
  "message": "0",
  "name": "Error",
}
`;

exports[`dont explode on primitives: 0n 1`] = `
{
  "debug": {
    "err": "0",
    "typeofErr": "bigint",
  },
  "message": "0",
  "name": "Error",
}
`;

exports[`dont explode on primitives: Symbol(kaboom) 1`] = `
{
  "debug": {
    "err": "Symbol(kaboom)",
    "typeofErr": "symbol",
  },
  "message": "Symbol(kaboom)",
  "name": "Error",
}
`;

exports[`dont explode on primitives: false 1`] = `
{
  "debug": {
    "err": "false",
    "typeofErr": "boolean",
  },
  "message": "false",
  "name": "Error",
}
`;

exports[`dont explode on primitives: null 1`] = `
{
  "debug": {
    "err": "null",
    "typeofErr": "object",
  },
  "message": "null",
  "name": "Error",
}
`;

exports[`dont explode on primitives: string 1`] = `
{
  "debug": {
    "err": "string",
    "typeofErr": "string",
  },
  "message": "string",
  "name": "Error",
}
`;

exports[`dont explode on primitives: undefined 1`] = `
{
  "debug": {
    "err": "undefined",
    "typeofErr": "undefined",
  },
  "message": "undefined",
  "name": "Error",
}
`;

exports[`dont explode on voids: null 1`] = `
{
  "debug": {
    "err": "null",
    "typeofErr": "object",
  },
  "message": "null",
  "name": "Error",
}
`;

exports[`dont explode on voids: undefined 1`] = `
{
  "debug": {
    "err": "undefined",
    "typeofErr": "undefined",
  },
  "message": "undefined",
  "name": "Error",
}
`;

exports[`serialize/unserialize 1`] = `
{
  "code": 2,
  "details": [
    {
      "locale": "en",
      "message": "woo yeah",
    },
  ],
  "message": "woo yeah",
}
`;

exports[`serialize/unserialize 2`] = `
{
  "code": 2,
  "debug": {
    "params": {
      "code": 2,
      "details": [
        {
          "locale": "en",
          "message": "woo yeah",
        },
      ],
      "message": "Test",
      "name": "Error",
      "stack": "Error: Test
    at .../serialize.test.ts:71:14
    at .../chunk-hooks.js:155:11
    at .../chunk-hooks.js:752:26
    at .../chunk-hooks.js:1897:20
    at new Promise (<anonymous>)
    at runWithTimeout (.../chunk-hooks.js:1863:10)
    at runTest (.../chunk-hooks.js:1574:12)
    at runSuite (.../chunk-hooks.js:1729:8)
    at runFiles (.../chunk-hooks.js:1787:3)
    at startTests (.../chunk-hooks.js:1820:3)",
    },
  },
  "details": [
    {
      "locale": "en",
      "message": "woo yeah",
    },
  ],
  "message": "Test",
  "name": "Error",
  "stack": "Error: Test
    at CustomError.fromJSON (.../custom-error.ts:227:15)
    at .../serialize.test.ts:76:28
    at .../chunk-hooks.js:155:11
    at .../chunk-hooks.js:752:26
    at .../chunk-hooks.js:1897:20
    at new Promise (<anonymous>)
    at runWithTimeout (.../chunk-hooks.js:1863:10)
    at runTest (.../chunk-hooks.js:1574:12)
    at runSuite (.../chunk-hooks.js:1729:8)
    at runFiles (.../chunk-hooks.js:1787:3)",
}
`;
